# docdiff

./: .gitignore  CLAUDE.md  README-ja.md  README-translation-status.md  README-translation-tasks.csv  README.md  pyproject.toml
.ai-workspace/: README.md
.claude/commands/: adr.md  auto-imp.md  myst-refactor.md  python-quality-check.md
.docdiff/: config.yml
docs/en/: ai-translation.md  api-reference.md  architecture.md  cli-reference.md  developer-guide.md  index.md  sphinx-integration.md  user-guide.md
docs/ja/: ai-translation.md  api-reference.md  architecture.md  cli-reference.md  conf.py  developer-guide.md  index.md  sphinx-integration.md  user-guide.md
samples/: README.md  ai-config.yaml  glossary.json
samples/exports/: tasks.csv  tasks.json
samples/myst-project/: README.md
samples/myst-project/en/: advanced.md  index.md  quickstart.md
samples/myst-project/ja/: index.md  quickstart.md
samples/reports/: report-compact.md  report-detailed.md  report-github.md
samples/rest-project/: README.rst
samples/rest-project/en/: advanced.rst  (+2 more)
samples/views/: metadata.txt  side-by-side.txt  stats.txt  summary.txt  tree.txt
samples/workflow/: ai-translation.md
src/docdiff/: __init__.py
tests/e2e/: __init__.py  test_rest_workflow.py  test_workflow.py
tests/unit/: test_cache.py  test_cli_main.py  test_comparison.py  test_database.py  test_import_cmd.py  test_migration.py  test_models.py  test_myst_parser.py  test_reporters.py  test_rest_parser.py  test_simple_compare.py  test_translation_detection.py  test_translation_pair.py  test_workflow.py
(+119 files in other folders)
