[project]
name = "docdiff"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "myst-parser>=4.0.1",
    "pydantic>=2.11.7",
    "sphinx>=8.2.3",
    "typer>=0.17.4",
]

[project.scripts]
docdiff = "docdiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
]

[project.optional-dependencies]
docs = [
    "sphinx-rtd-theme>=3.0.2",
]
excel = ["openpyxl>=3.1.0"]
xliff = ["lxml>=5.0.0"]
all = ["openpyxl>=3.1.0", "lxml>=5.0.0"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["docs/", "tests/"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
